--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href=".static/favicon.ico" />
     <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="{% static 'css/styles.css' %}" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
 
 <body class="d-flex flex-column h-100">
