--- a/templates/index.html
+++ b/templates/index.html
@@ -8,11 +8,16 @@
         <div class="col-lg-7"><img class="img-fluid rounded mb-4 mb-lg-0"
                 src="https://dummyimage.com/900x400/dee2e6/6c757d.jpg" alt="..." /></div>
         <div class="col-lg-5">
-            <h1 class="font-weight-light">Business Name or Tagline</h1>
-            <p>This is a template that is great for small businesses. It doesn't have too much fancy flare to it, but it
-                makes a great use of the standard Bootstrap core components. Feel free to use this template for any
-                project you want!</p>
-            <a class="btn btn-primary" href="#!">Call to Action!</a>
+            <h1 class="font-weight-light">Quick MOT</h1>
+            {% if user.is_authenticated %}
+            <p>Welcome! {{ user.first_name }}, Let's start the procces to schedule the MOT test for your car, 
+                click on "Book MOT Test" to get started. 
+                We will need the car registration number.</p>
+            <a class="btn btn-primary" href="#!">Book MOT Test</a>
+            {% else %}
+            <p>Welcome! Here is the perfect place to schedule the MOT test for your car, click on "Register" to get started</p>
+            <a class="btn btn-primary" href="{% url 'account_signup' %}">Register</a>
+            {% endif %}
         </div>
     </div>
     <!-- Call to Action-->
