--- a/templates/add_car_reg.html
+++ b/templates/add_car_reg.html
@@ -9,15 +9,16 @@
                 src="https://dummyimage.com/900x400/dee2e6/6c757d.jpg" alt="..." /></div>
         <div class="col-lg-5">
             <h1 class="font-weight-light">Quick MOT</h1>
-            {% if user.is_authenticated %}
-            <p>Welcome! {{ user.first_name }}, Let's start the procces to schedule the MOT test for your car, 
-                click on "Book MOT Test" to get started. 
-                We will need the car registration number.</p>
-            <a class="btn btn-primary" href="{% url 'add_car_reg' %}">Book MOT Test</a>
-            {% else %}
-            <p>Welcome! Here is the perfect place to schedule the MOT test for your car, click on "Register" to get started</p>
-            <a class="btn btn-primary" href="{% url 'account_signup' %}">Register</a>
-            {% endif %}
+            <p class="card-text">Enter your car registration number.</p>
+            <form action="add_car_reg" method="post">
+                {% csrf_token %}
+                {{ form.as_p }}
+                <div>
+                    <p>
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                    </p>
+                </div>
+            </form>
         </div>
     </div>
     <!-- Call to Action-->
