--- a/templates/add_booking.html
+++ b/templates/add_booking.html
@@ -39,11 +39,13 @@
                             <div class="carousel-item red-bg active">
                                 <p class="text-center">{{ booking }}</p>
                                 <a class="btn btn-primary btn-sm" href="/delete_booking/{{ booking.id }}">Cancel</a>
+                                <a class="btn btn-primary btn-sm" href="/change_booking/{{ booking.id }}">Change Date</a>
                             </div>
                             {% else %}
                             <div class="carousel-item red-bg">
                                 <p class="text-center">{{ booking }}</p>
                                 <a class="btn btn-primary btn-sm" href="/delete_booking/{{ booking.id }}">Cancel</a>
+                                <a class="btn btn-primary btn-sm" href="/change_booking/{{ booking.id }}">Change Date</a>
                             </div>
                             {% endif %}
                             {% empty %}
