--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "acounts.html" %}
 
 {% load i18n %}
 {% load account socialaccount %}
@@ -18,7 +18,7 @@
         {% if redirect_field_value %}
         <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
         {% endif %}
-        <button class="primaryAction" type="submit">{% trans "Sign In" %}</button>
+        <button class="primaryAction btn btn-primary" type="submit">{% trans "Sign In" %}</button>
       </form>
     </div>
   </div>
