--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "acounts.html" %}
 
 {% load i18n %}
 
@@ -17,7 +17,7 @@
         {% if redirect_field_value %}
         <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
         {% endif %}
-        <button type="submit">{% trans 'Sign Out' %}</button>
+        <button type="submit" class="btn btn-primary">{% trans 'Sign Out' %}</button>
       </form>
     </div>
   </div>
