--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "acounts.html" %}
 
 {% load i18n %}
 
@@ -19,7 +19,7 @@
         {% if redirect_field_value %}
         <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
         {% endif %}
-        <button type="submit">{% trans "Sign Up" %} &raquo;</button>
+        <button type="submit" class="btn btn-primary">{% trans "Sign Up" %} &raquo;</button>
       </form>
     </div>
   </div>
