Update address card

--- a/templates/base.html
+++ b/templates/base.html
@@ -79,8 +79,8 @@
                 <div class="col-md-4 mb-5">
                     <div class="card h-100">
                         <div class="card-body red-bg">
-                            <h2 class="card-title">Bookings</h2>
-                            <p class="card-text">Upcomming bookings.</p>
+                            <h2 class="card-title">Your Bookings</h2>
+                            <p class="card-text zero-margin">Upcomming bookings.</p>
                             {% if user.is_authenticated %}
                             <div id="bookings_carousel" class="carousel slide">
                                 <div class="carousel-inner">
@@ -134,12 +134,11 @@
                 <div class="col-md-4 mb-5">
                     <div class="card h-100">
                         <div class="card-body red-bg">
-                            <h2 class="card-title">Card Two</h2>
-                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod tenetur
-                                ex natus
-                                at dolorem enim! Nesciunt pariatur voluptatem sunt quam eaque, vel, non in id dolore
-                                voluptates
-                                quos eligendi labore.</p>
+                            <h2 class="card-title text-center">Location</h2>
+                            <p class="card-text text-center zero-margin">301 Dollis Hill Lane</p>
+                            <p class="card-text text-center zero-margin">London</p>
+                            <p class="card-text text-center zero-margin">NW2 6JT</p>
+                            <p class="card-text text-center zero-margin">Tell: 1234567890</p>
                         </div>
                     </div>
                 </div>
