--- a/static/css/style.css
+++ b/static/css/style.css
@@ -13,3 +13,22 @@
 .zero-margin {
     margin-bottom: 2px;
 }
+
+.rating-list li {
+    float: right;
+    color: #ddd;
+    padding: 10px 5px;
+  }
+
+  .rating-list li:hover,
+  .rating-list li:hover ~ li {
+    color: orange;
+  }
+
+  .rating-list {
+    display: inline-block;
+    list-style: none;
+  }
+  .checked {
+      color: orange;
+  }
