--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,6 @@
     <script src="//cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="//cdn.bootcss.com/moment.js/2.17.1/moment.min.js"></script>
 </head>
-
 <body class="d-flex flex-column h-100">
     <!-- Responsive navbar-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -61,7 +60,6 @@
             </div>
         </div>
     </div>
-
     <main class="flex-shrink-0">
         <!-- Page Content-->
         <div class="container px-4 px-lg-5">
@@ -145,10 +143,50 @@
                 <div class="col-md-4 mb-5">
                     <div class="card h-100">
                         <div class="card-body red-bg">
-                            <h2 class="card-title">Card Three</h2>
-                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem magni
-                                quas ex
-                                numquam, maxime minus quam molestias corporis quod, ea minima accusamus.</p>
+                            {% for site in sites %}
+                            {% if user.is_authenticated%}
+                            <h2 class="card-title">{{ site.header }}</h2>
+                            <p class="card-text">Show us your satisfaction level</p>
+                            <h5 class="card-title">Avg rating:
+                                <span class="fa fa-star {% if site.average_rating > 0 %} checked {% endif %}"></span>
+                                <span class="fa fa-star {% if site.average_rating > 1 %} checked {% endif %}"></span>
+                                <span class="fa fa-star {% if site.average_rating > 2 %} checked {% endif %}"></span>
+                                <span class="fa fa-star {% if site.average_rating > 3 %} checked {% endif %}"></span>
+                                <span class="fa fa-star {% if site.average_rating > 4 %} checked {% endif %}"></span>
+                            </h5>
+                            {% if site.user_rating > 0 %}
+                            <p class="card-text">Thank you for your rating!</p>
+                            {% else %}
+                            <ul class="btn btn-light list-inline rating-list">
+                                <li onclick="rate(5, {{ site.id }})">
+                                    <i class="fa fa-star {% if site.user_rating > 4 %} checked {% endif %}"
+                                        title="Rate 5"></i></li>
+                                <li onclick="rate(4, {{ site.id }})">
+                                    <i class="fa fa-star {% if site.user_rating > 3 %} checked {% endif %}"
+                                        title="Rate 4"></i></li>
+                                <li onclick="rate(3, {{ site.id }})">
+                                    <i class="fa fa-star {% if site.user_rating > 2 %} checked {% endif %}"
+                                        title="Rate 3"></i></li>
+                                <li onclick="rate(2, {{ site.id }})">
+                                    <i class="fa fa-star {% if site.user_rating > 1 %} checked {% endif %}"
+                                        title="Rate 2"></i></li>
+                                <li onclick="rate(1, {{ site.id }})">
+                                    <i class="fa fa-star {% if site.user_rating > 0 %} checked {% endif %}"
+                                        title="Rate 1"></i></li>
+                            </ul>
+                            {% endif %}
+                            {% else %}
+                            <h2 class="card-title">Rate us!</h2>
+                            <p class="card-text">Log in to rate our service.</p>
+                            <h5 class="card-title">Avg rating:
+                                <span class="fa fa-star {% if site.average_rating > 0 %} checked {% endif %}"></span>
+                                <span class="fa fa-star {% if site.average_rating > 1 %} checked {% endif %}"></span>
+                                <span class="fa fa-star {% if site.average_rating > 2 %} checked {% endif %}"></span>
+                                <span class="fa fa-star {% if site.average_rating > 3 %} checked {% endif %}"></span>
+                                <span class="fa fa-star {% if site.average_rating > 4 %} checked {% endif %}"></span>
+                            </h5>
+                            {% endif %}
+                            {% endfor %}
                         </div>
                     </div>
                 </div>
@@ -163,7 +201,7 @@
     </footer>
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Core theme JS-->
+    <!-- Custom JS-->
     <script src="{% static 'js/scripts.js' %}"></script>
 </body>
 
