Add logo image link

--- a/templates/acounts.html
+++ b/templates/acounts.html
@@ -70,7 +70,7 @@
     <!-- Footer-->
     <footer class="footer mt-auto py-3 bg-dark fixed-bottom">
         <div class="container px-4 px-lg-5">
-            <p class="m-0 text-center text-white">Copyright &copy; Your Website 2022</p>
+            <p class="m-0 text-center text-white">Copyright &copy; Quick MOT 2023</p>
         </div>
     </footer>
     <!-- Bootstrap core JS-->
