--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 <!-- Heading Row-->
 <div class="row gx-4 gx-lg-5 align-items-center my-5">
     <div class="col-lg-7"><img class="img-fluid rounded mb-4 mb-lg-0"
-            src="https://dummyimage.com/900x400/dee2e6/6c757d.jpg" alt="..." /></div>
+        src="https://res.cloudinary.com/daltp6aje/image/upload/c_scale,h_400,w_900/v1677074419/690539_r7i7ye.jpg" alt="MOT Centre Image" /></div>
     <div class="col-lg-5">
         <h1 class="font-weight-light">Quick MOT</h1>
         {% if user.is_authenticated %}
