--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
     <meta name="author" content="Quick MOT" />
     <title>Quick MOT</title>
     <!-- Favicon-->
-    <link rel="icon" type="image/x-icon" href=".static/favicon.ico" />
+    <link rel="icon" type="image/xicon" href="{% static 'favicon/favicon.ico' %}">
     <!-- Core theme CSS (includes Bootstrap)-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
@@ -24,6 +24,7 @@
     <script src="//cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="//cdn.bootcss.com/moment.js/2.17.1/moment.min.js"></script>
 </head>
+
 <body class="d-flex flex-column h-100">
     <!-- Responsive navbar-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -144,48 +145,48 @@
                     <div class="card h-100">
                         <div class="card-body red-bg">
                             {% for site in sites %}
-                                {% if user.is_authenticated%}
-                                <h2 class="card-title">{{ site.header }}</h2>
-                                <p class="card-text">Show us your satisfaction level</p>
-                                <h5 class="card-title">Avg rating:
-                                    <span class="fa fa-star {% if site.average_rating > 0 %} checked {% endif %}"></span>
-                                    <span class="fa fa-star {% if site.average_rating > 1 %} checked {% endif %}"></span>
-                                    <span class="fa fa-star {% if site.average_rating > 2 %} checked {% endif %}"></span>
-                                    <span class="fa fa-star {% if site.average_rating > 3 %} checked {% endif %}"></span>
-                                    <span class="fa fa-star {% if site.average_rating > 4 %} checked {% endif %}"></span>
-                                </h5>
-                                    {% if site.user_rating > 0 %}
-                                    <p class="card-text">Thank you for your rating!</p>
-                                    {% else %}
-                                    <ul class="btn btn-light list-inline rating-list">
-                                        <li onclick="rate(5, {{ site.id }})">
-                                            <i class="fa fa-star {% if site.user_rating > 4 %} checked {% endif %}"
-                                                title="Rate 5"></i></li>
-                                        <li onclick="rate(4, {{ site.id }})">
-                                            <i class="fa fa-star {% if site.user_rating > 3 %} checked {% endif %}"
-                                                title="Rate 4"></i></li>
-                                        <li onclick="rate(3, {{ site.id }})">
-                                            <i class="fa fa-star {% if site.user_rating > 2 %} checked {% endif %}"
-                                                title="Rate 3"></i></li>
-                                        <li onclick="rate(2, {{ site.id }})">
-                                            <i class="fa fa-star {% if site.user_rating > 1 %} checked {% endif %}"
-                                                title="Rate 2"></i></li>
-                                        <li onclick="rate(1, {{ site.id }})">
-                                            <i class="fa fa-star {% if site.user_rating > 0 %} checked {% endif %}"
-                                                title="Rate 1"></i></li>
-                                    </ul>
-                                    {% endif %}
-                                {% else %}
-                                <h2 class="card-title">Rate us!</h2>
-                                <p class="card-text">Log in to rate our service.</p>
-                                <h5 class="card-title">Avg rating:
-                                    <span class="fa fa-star {% if site.average_rating > 0 %} checked {% endif %}"></span>
-                                    <span class="fa fa-star {% if site.average_rating > 1 %} checked {% endif %}"></span>
-                                    <span class="fa fa-star {% if site.average_rating > 2 %} checked {% endif %}"></span>
-                                    <span class="fa fa-star {% if site.average_rating > 3 %} checked {% endif %}"></span>
-                                    <span class="fa fa-star {% if site.average_rating > 4 %} checked {% endif %}"></span>
-                                </h5>
-                                {% endif %}
+                            {% if user.is_authenticated%}
+                            <h2 class="card-title">{{ site.header }}</h2>
+                            <p class="card-text">Show us your satisfaction level</p>
+                            <h5 class="card-title">Avg rating:
+                                <span class="fa fa-star {% if site.average_rating > 0 %} checked {% endif %}"></span>
+                                <span class="fa fa-star {% if site.average_rating > 1 %} checked {% endif %}"></span>
+                                <span class="fa fa-star {% if site.average_rating > 2 %} checked {% endif %}"></span>
+                                <span class="fa fa-star {% if site.average_rating > 3 %} checked {% endif %}"></span>
+                                <span class="fa fa-star {% if site.average_rating > 4 %} checked {% endif %}"></span>
+                            </h5>
+                            {% if site.user_rating > 0 %}
+                            <p class="card-text">Thank you for your rating!</p>
+                            {% else %}
+                            <ul class="btn btn-light list-inline rating-list">
+                                <li onclick="rate(5, {{ site.id }})">
+                                    <i class="fa fa-star {% if site.user_rating > 4 %} checked {% endif %}"
+                                        title="Rate 5"></i></li>
+                                <li onclick="rate(4, {{ site.id }})">
+                                    <i class="fa fa-star {% if site.user_rating > 3 %} checked {% endif %}"
+                                        title="Rate 4"></i></li>
+                                <li onclick="rate(3, {{ site.id }})">
+                                    <i class="fa fa-star {% if site.user_rating > 2 %} checked {% endif %}"
+                                        title="Rate 3"></i></li>
+                                <li onclick="rate(2, {{ site.id }})">
+                                    <i class="fa fa-star {% if site.user_rating > 1 %} checked {% endif %}"
+                                        title="Rate 2"></i></li>
+                                <li onclick="rate(1, {{ site.id }})">
+                                    <i class="fa fa-star {% if site.user_rating > 0 %} checked {% endif %}"
+                                        title="Rate 1"></i></li>
+                            </ul>
+                            {% endif %}
+                            {% else %}
+                            <h2 class="card-title">Rate us!</h2>
+                            <p class="card-text">Log in to rate our service.</p>
+                            <h5 class="card-title">Avg rating:
+                                <span class="fa fa-star {% if site.average_rating > 0 %} checked {% endif %}"></span>
+                                <span class="fa fa-star {% if site.average_rating > 1 %} checked {% endif %}"></span>
+                                <span class="fa fa-star {% if site.average_rating > 2 %} checked {% endif %}"></span>
+                                <span class="fa fa-star {% if site.average_rating > 3 %} checked {% endif %}"></span>
+                                <span class="fa fa-star {% if site.average_rating > 4 %} checked {% endif %}"></span>
+                            </h5>
+                            {% endif %}
                             {% endfor %}
                         </div>
                     </div>
