--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -18,6 +18,7 @@
         <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
         {% endif %}
         <button type="submit" class="btn btn-primary">{% trans 'Sign Out' %}</button>
+        <a class="btn btn-primary" href="{% url 'home' %}">Go Back</a>
       </form>
     </div>
   </div>
