Center cards content

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -32,3 +32,11 @@
   .checked {
       color: orange;
   }
+
+  #edit-booking {
+    display: inline;
+  }
+
+.avg-rating {
+    font-size: medium;
+}
