--- a/templates/acounts.html
+++ b/templates/acounts.html
@@ -9,7 +9,7 @@
     <meta name="author" content="" />
     <title>Quick MOT</title>
     <!-- Favicon-->
-    <link rel="icon" type="image/x-icon" href=".static/favicon.ico" />
+    <link rel="icon" type="image/xicon" href="{% static 'favicon/favicon.ico' %}">
     <!-- Core theme CSS (includes Bootstrap)-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
