--- a/templates/add_car_reg.html
+++ b/templates/add_car_reg.html
@@ -11,7 +11,7 @@
         <form action="" method="post">
             {% csrf_token %}
             <p>
-                <input type="text" name="car_reg" id="car_reg">
+                <input type="text" name="car_reg" id="car_reg" maxlength="8" minlength="3">
             </p>
             <div>
                 <p>
